# points_estimation

./: CMakeLists.txt  README.md
Task-Points/: 2-lines.txt  2-points.txt  3-lines.txt  3-points.txt  4-lines.txt  4-points.txt
src/: est_algo.cpp  estimate_points.cpp  file_reading.cpp
